test/expected/Syntax_error.txt
Parse error on line 1:
data.syntaxErr(
---------------^
Expecting ')', 'SINGLE_QUOTED_STRING', 'DOUBLE_QUOTED_STRING', 'NUMBER', ',', 'VAR', got 'EOF'